# Boogie-Interpreter

./: .gitignore  README.md  __init__.py  boogie.lark  errors.py  pytest.ini  runner.py
.github/workflows/: test.yml
archive/legacy_python/: README.md
coverage_gen/: __init__.py  corpus.py  driver.py  evaluator.py  mutator.py  symbolic_state.py  writer.py
native/: Cargo.toml  pyproject.toml
native/src/: builtins.rs  concolic.rs  debug_log.rs  input_state.rs  lib.rs  lowering.rs  memory_map.rs  opcodes.rs  raw_log.rs  raw_log_reader.rs  trace.rs  vm.rs
native/src/kani_proofs/: bitvector_ops.rs  mod.rs
parser/: __init__.py  assignment.py  binding.py  boogie_parser.py  declaration.py  expression.py  node.py  program.py  scope.py  specifications.py  statement.py  transformer.py  type.py
python/: Context.py  Environment.py  MemoryMap.py  interpreter.py
tests/: README.md  conftest.py  inspect_auth.py  inspect_pkcs15.py  inspect_pkcs31.py  inspect_pms.py  test_cross_validate.py  test_debug_logging.py  test_expression_ops.py  test_golden_traces.py  test_interpreter.py  test_interpreter_e2e.py  test_interpreter_resume.py  test_native_vs_interpreter.py
tests/benchmark/: pkcs1_baselines.json  test_bearssl_pkcs1_coverage.py  test_rust_realworld_golden.py  (+1 more)
utils/: bitops.py  bitops_contracts.py  bytes.py  coverage_fuzz.py  cvc5_helper.py  cvc5_serde.py  debug_log.py  gen_input.py  indent_log.py  input_parser.py  inputs.py  json_to_input.py  program.py  raw_log.py  state_io.py  static_eval.py  store_utils.py  support_matrix.py  utils.py  utils_cvc5.py
(+22 files in other folders)
