[package]
name = "swoosh-interp"
version = "0.1.0"
edition = "2021"

[lib]
name = "swoosh_interp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rustc-hash = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
