[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "swoosh-interp"
version = "0.1.0"
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
gcc = "*"
gxx = "*"
pytest = "*"
lark = ">=1.3.1,<2"

[tool.pixi.pypi-dependencies]
swoosh-interp = { path = ".", editable = true }
maturin = "*"

[tool.pixi.tasks]
build = "maturin develop --release"
test = "pytest"
